[package]
name = "led-lamp"
version = "0.1.0"
authors = ["Kay Hannay <klinux@hannay.de>"]
edition = "2021"
license = "MIT"
publish = false

[dependencies]
esp32c3-hal = { version = "0.14.0", features = ["embassy", "async", "rt", "embassy-time-timg0"] }
esp-backtrace = { version = "0.10.0", features = ["esp32c3", "panic-handler", "exception-handler", "print-jtag-serial"] }
esp-println = { version = "0.8.0", default-features = false, features = [
    "esp32c3",
    "jtag-serial",
    "log",
    "critical-section",
    "colors",
] }
esp-wifi  = { version = "0.2.0", features = ["esp32c3", "wifi"] }
smart-leds = "0.3.0"
esp-hal-smartled = {version = "0.7.0", features = ["esp32c3"]}
palette = { version = "0.7.3", default-features = false, features = ["libm"] }
